Fix issue with background image on mobile
Background image was not showing on mobile devices. This is an attempt to fix it

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('../images/background.jpg');
+    background: url('../images/background.jpg');
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
